[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/Bigboy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/dialogue_bubble.gd" type="Script" id=2]
[ext_resource path="res://textures/text_bubble.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0.733501, 0.7 ), Vector2( 0.744, 0.71 ) ]
}

[node name="dialogue_bubble" type="Node2D"]
script = ExtResource( 2 )

[node name="label" type="Label" parent="."]
margin_left = 36.0
margin_top = 543.0
margin_right = 1243.0
margin_bottom = 709.0
custom_fonts/font = SubResource( 1 )
text = "Hello my name is yaron and i am a balon. Nice too meet you, do you want to see my pee pee?"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 637.617, 624.122 )
scale = Vector2( 0.743242, 0.709278 )
texture = ExtResource( 3 )

[node name="idle_anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="timer" type="Timer" parent="."]
wait_time = 0.03

[node name="end_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="end_timer" to="." method="_on_end_timer_timeout"]
